deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: httpd:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  type: ClusterIP

  selector:
    app: nginx
  ports:

    - port: 80

      targetPort: 80
      protocol: TCP
