ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: dev.john.local.jacky
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: http-service
              port:
                number: 80
~
